feat: add nowrap text

--- a/museum/style.css
+++ b/museum/style.css
@@ -86,12 +86,14 @@ h1 {
   color: #FFFFFF;
   padding-left: 75px;
   display: block;
+  white-space: nowrap;
 }
 
 h2 {
   font: normal normal 80px/90px "Forum";
   text-transform: uppercase;
   letter-spacing: 5px;
+  white-space: nowrap;
 }
 
 h3 {
@@ -99,10 +101,12 @@ h3 {
   letter-spacing: 5px;
   text-transform: uppercase;
   color: #000000;
+  white-space: nowrap;
 }
 
 h4 {
   font: normal 500 28px/33px 'Roboto', sans-serif;
+  white-space: nowrap;
 }
 
 .navigation a {
