--- a/museum/style.scss
+++ b/museum/style.scss
@@ -11,6 +11,8 @@ li {
     --font2: 32px;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Forum&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 html {
     scroll-behavior: smooth;
 }
@@ -89,11 +91,11 @@ svg {
 
 }
 
-h1 {
+.main-title {
     font: normal normal 28px/31px "Forum";
     letter-spacing: 5px;
     text-transform: uppercase;
-    background-image: url(/assets/svg/Logo.svg);
+    background-image: url("assets/svg/Logo.svg");
     background-repeat: no-repeat;
     color: #FFFFFF;
     padding-left: 75px;
@@ -1124,7 +1126,7 @@ footer {
         align-items: center;
         padding: 85px 0 50px;
 
-        h1 {
+        .main-title {
             align-self: flex-start;
         }
 
