--- a/museum/style.css
+++ b/museum/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 li {
   list-style-type: none;
 }
@@ -9,13 +8,6 @@ li {
   --font-gold: #9d8665;
   --font1: 80px;
   --font2: 32px;
-}
-
-@font-face {
-  font-family: Roboto;
-  /* Гарнитура шрифта */
-  src: url(assets/fonts/Roboto/Roboto-Medium.ttf);
-  /* Путь к файлу со шрифтом */
 }
 
 html {
@@ -655,6 +647,14 @@ header .container ul {
   font: normal normal 18px/21px 'Roboto', sans-serif;
 }
 
+.booking-tickets .container > div:first-child form ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
 .booking-tickets .container > div:first-child form input,
 .booking-tickets .container > div:first-child form select,
 .booking-tickets .container > div:first-child form option {
@@ -687,10 +687,13 @@ header .container ul {
 
 .booking-tickets .container > div:first-child form li {
   width: 400px;
+  height: 45px;
   margin-bottom: 20px;
   background-repeat: no-repeat;
-  background-position: left center;
+  background-position: left 15px center;
   border: 1px solid black;
+  padding-left: 43px;
+  line-height: 45px;
 }
 
 .booking-tickets .container > div:first-child form .chooseDate,
@@ -701,11 +704,13 @@ header .container ul {
 
 .booking-tickets .container > div:first-child form .chooseDate {
   margin-right: 20px;
-  background-image: url("assets/svg/date.svg");
+  background-image: url("assets/svg/date.svg"), url("assets/svg/arrow.svg");
+  background-position: left 15px center, right 15px center;
 }
 
 .booking-tickets .container > div:first-child form .chooseTime {
-  background-image: url("assets/svg/Time.svg");
+  background-image: url("assets/svg/Time.svg"), url("assets/svg/arrow.svg");
+  background-position: left 15px center, right 15px center;
 }
 
 .booking-tickets .container > div:first-child form .writeName {
@@ -722,6 +727,73 @@ header .container ul {
 
 .booking-tickets .container > div:first-child form .selectType {
   background-image: url("assets/svg/ballot.svg"), url("assets/svg/arrow.svg");
+  background-position: left 15px center, right 15px center;
+}
+
+.booking-tickets .container > div:first-child .entry-ticket {
+  height: 135px;
+  width: 400px;
+  border: 1px solid #030303;
+  padding: 10px 15px 15px;
+}
+
+.booking-tickets .container > div:first-child .entry-ticket h5 {
+  color: var(--font-gold);
+  font-family: "Forum";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 20px;
+  padding-bottom: 5px;
+}
+
+.booking-tickets .container > div:first-child .entry-ticket .ticketsAmount {
+  padding-top: 5px;
+  border-top: 2px solid var(--dark-red);
+  padding-top: 18px;
+}
+
+.booking-tickets .container > div:first-child .entry-ticket .ticketsAmount ul {
+  height: 50px;
+}
+
+.booking-tickets .container > div:first-child .entry-ticket .ticketsAmount li {
+  border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-left: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 20px;
+}
+
+.booking-tickets .container > div:first-child .entry-ticket .ticketsAmount li div {
+  height: 20px;
+  line-height: 20px;
+}
+
+.booking-tickets .container > div:first-child .entry-ticket .ticketsAmount li .counter {
+  display: inline-block;
+  width: 105px;
+  height: 25px;
+  border: 1px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.booking-tickets .container > div:first-child .entry-ticket .ticketsAmount li .counter button {
+  background-color: #030303;
+  border: none;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .booking-tickets .container > div:last-child {
