--- a/museum/style.scss
+++ b/museum/style.scss
@@ -17,7 +17,6 @@ html {
 }
 
 
-
 button {
     cursor: pointer;
 }
@@ -668,6 +667,10 @@ header {
             form {
                 font: normal normal 18px/21px 'Roboto', sans-serif;
 
+                ul {
+                    display: flex;
+                    flex-wrap: wrap;
+                }
 
                 input,
                 select,
@@ -687,10 +690,13 @@ header {
 
                 li {
                     width: 400px;
+                    height: 45px;
                     margin-bottom: 20px;
                     background-repeat: no-repeat;
-                    background-position: left center;
+                    background-position: left 15px center;
                     border: 1px solid black;
+                    padding-left: 43px;
+                    line-height: 45px;
 
                 }
 
@@ -702,12 +708,14 @@ header {
 
                 .chooseDate {
                     margin-right: 20px;
-                    background-image: url("assets/svg/date.svg");
+                    background-image: url("assets/svg/date.svg"), url("assets/svg/arrow.svg");
+                    background-position: left 15px center, right 15px center;
 
                 }
 
                 .chooseTime {
-                    background-image: url("assets/svg/Time.svg");
+                    background-image: url("assets/svg/Time.svg"), url("assets/svg/arrow.svg");
+                    background-position: left 15px center, right 15px center;
 
                 }
 
@@ -726,9 +734,75 @@ header {
 
                 .selectType {
                     background-image: url("assets/svg/ballot.svg"), url("assets/svg/arrow.svg");
+                    background-position: left 15px center, right 15px center;
                 }
 
 
+            }
+
+            .entry-ticket {
+                height: 135px;
+                width: 400px;
+                border: 1px solid #030303;
+                padding: 10px 15px 15px;
+
+                h5 {
+                    color: var(--font-gold);
+                    font-family: "Forum";
+                    font-style: normal;
+                    font-weight: normal;
+                    font-size: 18px;
+                    line-height: 20px;
+                    padding-bottom: 5px;
+
+                }
+
+                .ticketsAmount {
+                    padding-top: 5px;
+                    border-top: 2px solid var(--dark-red);
+                    padding-top: 18px;
+
+                    ul {
+                        height: 50px;
+                    }
+
+                    li {
+                        border: none;
+                        display: flex;
+                        justify-content: space-between;
+                        padding-left: 0;
+                        align-items: center;
+                        width: 100%;
+                        height: 20px;
+
+
+                        div {
+                            height: 20px;
+                            line-height: 20px;
+                        }
+
+
+
+                        .counter {
+                            display: inline-block;
+                            width: 105px;
+                            height: 25px;
+                            border: 1px solid black;
+                            display: flex;
+
+
+
+                            button {
+                                background-color: #030303;
+                                border: none;
+                                flex: 1;
+
+
+
+                            }
+                        }
+                    }
+                }
             }
         }
 
